force-app/main/default/objects/Enhancement__c/Enhancement__c.object-meta.xml
<CustomObject>
    <label>Enhancement</label>
    <nameField>
        <displayFormat>E{00000}</displayFormat>
        <label>Enhancement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhancements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>