force-app/main/default/objects/Enhancement__c/fields/Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate__c</fullName>
    <label>Cost/Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>