force-app/main/default/objects/Enhancement__c/fields/CSI_Requirements_Received__c.field-meta.xml
<CustomField>
    <fullName>CSI_Requirements_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSI Requirements Received</label>
    <type>Checkbox</type>
</CustomField>