force-app/main/default/objects/Enhancement__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Idea</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>