force-app/main/default/objects/Enhancement__c/fields/Impact_Effort__c.field-meta.xml
<CustomField>
    <fullName>Impact_Effort__c</fullName>
    <formula>&quot;Imp/Eff:&quot; &amp; TEXT(Impact__c) &amp; &quot;/&quot; &amp;  TEXT(Effort__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact/Effort</label>
    <type>Text</type>
</CustomField>