force-app/main/default/objects/Enhancement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Next</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
            <value>
                <fullName>Someday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>