force-app/main/default/objects/Enhancement__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Next</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
            <value>
                <fullName>Someday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>