force-app/main/default/objects/Enhancement__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Timeline__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan Mid Month</fullName>
            </value>
            <value>
                <fullName>Jan Month End</fullName>
            </value>
            <value>
                <fullName>Feb Mid Month</fullName>
            </value>
            <value>
                <fullName>Feb Month End</fullName>
            </value>
            <value>
                <fullName>Mar Mid Month</fullName>
            </value>
            <value>
                <fullName>Mar Month End</fullName>
            </value>
            <value>
                <fullName>Apr Mid Month</fullName>
            </value>
            <value>
                <fullName>Apr Month End</fullName>
            </value>
            <value>
                <fullName>May Mid Month</fullName>
            </value>
            <value>
                <fullName>May Month End</fullName>
            </value>
            <value>
                <fullName>Jun Mid Month</fullName>
            </value>
            <value>
                <fullName>Jun Month End</fullName>
            </value>
            <value>
                <fullName>Jul Mid Month</fullName>
            </value>
            <value>
                <fullName>Jul Month End</fullName>
            </value>
            <value>
                <fullName>Aug Mid Month</fullName>
            </value>
            <value>
                <fullName>Aug Month End</fullName>
            </value>
            <value>
                <fullName>Sep Mid Month</fullName>
            </value>
            <value>
                <fullName>Sep Month End</fullName>
            </value>
            <value>
                <fullName>Oct Mid Month</fullName>
            </value>
            <value>
                <fullName>Oct Month End</fullName>
            </value>
            <value>
                <fullName>Nov Mid Month</fullName>
            </value>
            <value>
                <fullName>Nov Month End</fullName>
            </value>
            <value>
                <fullName>Dec Mid Month</fullName>
            </value>
            <value>
                <fullName>Dec Month End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>