force-app/main/default/objects/Enhancement__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dayne</fullName>
            </value>
            <value>
                <fullName>Debbie</fullName>
            </value>
            <value>
                <fullName>Kate</fullName>
            </value>
            <value>
                <fullName>Michele DiSimo</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Lokesh</fullName>
            </value>
            <value>
                <fullName>Prathima</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <isActive>false</isActive>
                <label>Admin</label>
            </value>
            <value>
                <fullName>CRMIT</fullName>
                <isActive>false</isActive>
                <label>CRMIT</label>
            </value>
            <value>
                <fullName>Darshana</fullName>
                <isActive>false</isActive>
                <label>Darshana</label>
            </value>
            <value>
                <fullName>Kate \ Dayne</fullName>
                <isActive>false</isActive>
                <label>Kate \ Dayne</label>
            </value>
            <value>
                <fullName>Kate \ Debbie</fullName>
                <isActive>false</isActive>
                <label>Kate \ Debbie</label>
            </value>
            <value>
                <fullName>Lynn</fullName>
                <isActive>false</isActive>
                <label>Lynn</label>
            </value>
            <value>
                <fullName>Mark</fullName>
                <isActive>false</isActive>
                <label>Mark</label>
            </value>
            <value>
                <fullName>Michele Dube</fullName>
                <isActive>false</isActive>
                <label>Michele Dube</label>
            </value>
            <value>
                <fullName>Michele Dube \ Debbie</fullName>
                <isActive>false</isActive>
                <label>Michele Dube \ Debbie</label>
            </value>
            <value>
                <fullName>Michele Dube \ Michele DiSimo</fullName>
                <isActive>false</isActive>
                <label>Michele Dube \ Michele DiSimo</label>
            </value>
            <value>
                <fullName>Satish</fullName>
                <isActive>false</isActive>
                <label>Satish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>