force-app/main/default/objects/Enhancement__c/fields/Screengrab__c.field-meta.xml
<CustomField>
    <fullName>Screengrab__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Screengrab</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>