force-app/main/default/objects/Enhancement__c/fields/Service_Bug_Fix__c.field-meta.xml
<CustomField>
    <fullName>Service_Bug_Fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Bug Fix</label>
    <type>Checkbox</type>
</CustomField>