force-app/main/default/objects/Enhancement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idea</fullName>
                <default>true</default>
                <label>Idea</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
                <isActive>false</isActive>
                <label>Analysis</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Dismissed - Duplicate</fullName>
                <isActive>false</isActive>
                <label>Dismissed - Duplicate</label>
            </value>
            <value>
                <fullName>Tested</fullName>
                <isActive>false</isActive>
                <label>Tested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>