force-app/main/default/objects/Enhancement__c/fields/Suspect_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Reason_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suspect Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>