force-app/main/default/objects/Enhancement__c/fields/Suspect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suspect Reason</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>