force-app/main/default/objects/Enhancement__c/fields/Tactical__c.field-meta.xml
<CustomField>
    <fullName>Tactical__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>