force-app/main/default/objects/Enhancement__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>Satish 4/10/19 - Made this Required as records with null value in Timeline will not appear in Kanban</description>
    <label>Timeline</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24Q1</fullName>
            </value>
            <value>
                <fullName>24Q2</fullName>
            </value>
            <value>
                <fullName>24Q3</fullName>
            </value>
            <value>
                <fullName>24Q4</fullName>
            </value>
            <value>
                <fullName>25Q1</fullName>
            </value>
            <value>
                <fullName>25Q2</fullName>
            </value>
            <value>
                <fullName>25Q3</fullName>
            </value>
            <value>
                <fullName>25Q4</fullName>
            </value>
            <value>
                <fullName>26Q1</fullName>
            </value>
            <value>
                <fullName>26Q2</fullName>
            </value>
            <value>
                <fullName>26Q3</fullName>
            </value>
            <value>
                <fullName>26Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>