force-app/main/default/objects/Enhancement__c/fields/Top_Priority__c.field-meta.xml
<CustomField>
    <fullName>Top_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Priority</label>
    <type>Checkbox</type>
</CustomField>