force-app/main/default/objects/Enhancement__c/fields/Tracker_Reference__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracker Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>