force-app/main/default/objects/Enhancement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required Enhancement</fullName>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
            <value>
                <fullName>Gravel Pit Idea</fullName>
            </value>
            <value>
                <fullName>Day One Config Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>