force-app/main/default/objects/Enhancement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Idea__c</columns>
    <columns>Impact_Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Effort__c</columns>
    <columns>Tactical__c</columns>
    <columns>Impact__c</columns>
    <columns>Timeline__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notContain</operation>
        <value>Deployed,Dismissed,Dismissed - Duplicate</value>
    </filters>
    <label>Open Enhancements</label>
</ListView>