force-app/main/default/objects/Enhancement__c/listViews/Dayne_Open_Enhancements.listView-meta.xml
<ListView>
    <fullName>Dayne_Open_Enhancements</fullName>
    <columns>NAME</columns>
    <columns>Top_Priority__c</columns>
    <columns>Idea__c</columns>
    <columns>Description__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Stage__c</columns>
    <columns>Timeline__c</columns>
    <columns>Application__c</columns>
    <columns>Tactical__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Timeline__c</field>
        <operation>equals</operation>
        <value>20Q1,20Q2,20Q3,20Q4,21Q1,21Q2</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Idea,In Progress</value>
    </filters>
    <filters>
        <field>Resource__c</field>
        <operation>equals</operation>
        <value>Dayne,Kate \ Dayne</value>
    </filters>
    <label>Dayne Open Enhancements</label>
</ListView>