force-app/main/default/objects/Enhancement__c/listViews/Deployed_Enhancements.listView-meta.xml
<ListView>
    <fullName>Deployed_Enhancements</fullName>
    <columns>NAME</columns>
    <columns>Idea__c</columns>
    <columns>Tactical__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Timeline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <label>Deployed Enhancements</label>
</ListView>