force-app/main/default/objects/Enhancement__c/listViews/Kate_Open_Enhancements.listView-meta.xml
<ListView>
    <fullName>Kate_Open_Enhancements</fullName>
    <columns>NAME</columns>
    <columns>Top_Priority__c</columns>
    <columns>Idea__c</columns>
    <columns>Timeline__c</columns>
    <columns>Tactical__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Timeline__c</field>
        <operation>equals</operation>
        <value>20Q1,20Q2,20Q3,20Q4,21Q1,21Q2,21Q3,21Q4,25Q1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Idea,In Progress</value>
    </filters>
    <filters>
        <field>Resource__c</field>
        <operation>equals</operation>
        <value>Kate,Kate \ Dayne,Kate \ Debbie</value>
    </filters>
    <label>Kate Open Enhancements</label>
</ListView>