force-app/main/default/objects/Enhancement__c/listViews/Michele_DiSimo_Open_Enhancements.listView-meta.xml
<ListView>
    <fullName>Michele_DiSimo_Open_Enhancements</fullName>
    <columns>NAME</columns>
    <columns>Top_Priority__c</columns>
    <columns>Idea__c</columns>
    <columns>Description__c</columns>
    <columns>Timeline__c</columns>
    <columns>Suspect__c</columns>
    <columns>Suspect_Reason__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Stage__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Idea,In Progress</value>
    </filters>
    <filters>
        <field>Resource__c</field>
        <operation>equals</operation>
        <value>Michele DiSimo,Michele Dube \ Michele DiSimo</value>
    </filters>
    <label>Michele DiSimo Open Enhancements</label>
</ListView>