force-app/main/default/objects/Enhancement__c/listViews/Michele_Dube_Open_Enhancements.listView-meta.xml
<ListView>
    <fullName>Michele_Dube_Open_Enhancements</fullName>
    <columns>NAME</columns>
    <columns>Top_Priority__c</columns>
    <columns>Idea__c</columns>
    <columns>Timeline__c</columns>
    <columns>Tactical__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Timeline__c</field>
        <operation>equals</operation>
        <value>19Q3,19Q4,20Q1,20Q2,20Q3,20Q4,21Q1,21Q2,21Q3,21Q4,22Q1,22Q2,22Q3,22Q4,23Q1,23Q2,23Q3,23Q4</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Idea,In Progress</value>
    </filters>
    <filters>
        <field>Resource__c</field>
        <operation>equals</operation>
        <value>Michele Dube,Michele Dube \ Debbie,Michele Dube \ Michele DiSimo</value>
    </filters>
    <label>Michele Dube Open Enhancements</label>
</ListView>