force-app/main/default/objects/Enhancement__c/listViews/Strategic.listView-meta.xml
<ListView>
    <fullName>Strategic</fullName>
    <columns>NAME</columns>
    <columns>Idea__c</columns>
    <columns>Tactical__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Timeline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notContain</operation>
        <value>Deployed,Dismissed,Dismissed - Duplicate</value>
    </filters>
    <filters>
        <field>Tactical__c</field>
        <operation>equals</operation>
        <value>Strategic</value>
    </filters>
    <label>Strategic</label>
</ListView>