force-app/main/default/objects/Enhancement__c/listViews/x2020_Open_Enhancements.listView-meta.xml
<ListView>
    <fullName>x2020_Open_Enhancements</fullName>
    <columns>NAME</columns>
    <columns>Idea__c</columns>
    <columns>Description__c</columns>
    <columns>Top_Priority__c</columns>
    <columns>Impact__c</columns>
    <columns>Effort__c</columns>
    <columns>Resource__c</columns>
    <columns>Stage__c</columns>
    <columns>Timeline__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Timeline__c</field>
        <operation>equals</operation>
        <value>25Q1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Idea,In Progress</value>
    </filters>
    <label>LATER Items</label>
</ListView>